# ansible

./: .gitignore  00_microk8s_cluster.yaml  00_multipass.yaml  00_proxmox.yaml  01_sha_keys.yaml  01_template_overrides.yaml  02_disk_list.yaml  02_host_list.yaml  03_cluster.yaml  03_host_list.yaml  03_sha_keys.yaml  04_cluster.yaml  04_disk_list.yaml  05_disk_list.yaml  10_magicmirror.yaml  77_vscodeserver.yaml  New_README.md  README.md  ansible.cfg  ca_vars.yaml  clean_hosts.sh  creation.sh  csr.conf copy.template  devcluster.yaml  enrich_metadata.py  enriched_generated_role_table.md  firesale.sh  fix-the-switch-mgmt.md  fix-the-switch.md  hosts.ini  inventory.yaml  json2yaml.py  just_one.yaml  kubegres-service.yaml  microceph.yaml  microceph_add_disks.yaml  microceph_add_nodes.yaml  microceph_clean.yaml  microk8s.yaml  microk8s_add_nodes.yaml  (+17 more)
collections/: requirements.yml
docs/: microk8s.md  secretmanager.md  vault.md
inventory/: hosts.ini
mtig/: 0_cluster_virtual.yaml  1_multipass.yaml  1di_multipass_inventory_tasks.yaml  4_microk8s.yaml  4c_microk8s_configure.yaml  4ci_microk8s_configure_for_rook_ceph.yaml  99_multipass_teardown.yaml  hosts.ini
playbooks/: 00-ca-defaults.yaml  00-ca-key-passphrase.yaml  00_certificate_authortiy.yaml  00_proxmox.yaml  00_sha_keys.yaml  00_vm_overrides.yaml  01_template_overrides.yaml  04_cluster.yaml  05_disk_list.yaml  06_vault.yaml  10_magicmirror.yaml  44_celebrimbor.yaml  55_open-webui.yaml  77_vscodeserver.yaml  README.md  deployment_tests.yaml  (+18 more)
tools/ansible-vault-keys/: README.md  encrypt_values.py  pyproject.toml
(+550 files in other folders)
